--- a/assembly-endgame/index.css
+++ b/assembly-endgame/index.css
@@ -9,13 +9,13 @@ body {
     color: #D9D9D9;
     padding: 20px;
     height: 100vh;
-    display: flex;
-    justify-content: center;
 }
 
-/* main {
-    margin-bottom: 20px;
-} */
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 header {
     text-align: center;
@@ -34,22 +34,43 @@ header>p {
 }
 
 section.game-status {
-    background-color: #10A95B;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     color: #F9F4DA;
+    width: 100%;
+    max-width: 350px;
+    min-height: 60px;
     border-radius: 4px;
     margin-block: 30px;
 }
 
-section.game-status>h2 {
-    font-size: 1.25rem;
-    margin: 5px;
+section.game-status.won {
+    background-color: #10A95B;
+}
+
+section.game-status.lost {
+    background-color: #BA2A2A;
+}
+
+section.game-status.farewell {
+    background-color: #7A5EA7;
+    border: 1px dashed #323232;
 }
 
 section.game-status>p {
     margin: 5px;
+}
+
+section.game-status>p.farewell-message {
+    font-style: italic;
+    font-weight: 400;
+}
+
+section.game-status>h2 {
+    font-size: 1.25rem;
+    margin: 5px
 }
 
 section.language-chips {
@@ -64,12 +85,28 @@ section.language-chips {
 span.chip {
     border-radius: 3px;
     padding: 4.5px;
+    position: relative;
+}
+
+/* Dimmed overlay with skull on "lost" languages */
+span.chip.lost::before {
+    content: "💀";
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    font-size: 0.85rem;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 section.word {
     display: flex;
     justify-content: center;
-    gap: 3px;
+    gap: 2px;
     margin-bottom: 20px;
 }
 
@@ -82,6 +119,10 @@ section.word>span {
     align-items: center;
     font-size: 1.125rem;
     border-bottom: 1px solid #F9F4DA;
+}
+
+section.word>span.missed-letter {
+    color: #EC5D49;
 }
 
 section.keyboard {
@@ -102,6 +143,19 @@ section.keyboard>button {
     cursor: pointer;
 }
 
+section.keyboard>button.correct {
+    background-color: #10A95B;
+}
+
+section.keyboard>button.wrong {
+    background-color: #EC5D49;
+}
+
+section.keyboard>button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5
+}
+
 button.new-game {
     background-color: #11B5E5;
     border: 1px solid #D7D7D7;
@@ -112,4 +166,16 @@ button.new-game {
     display: block;
     margin-inline: auto;
     cursor: pointer;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
 }
